--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="last_name">Last name</string>
     <string name="email_address">Email Address</string>
     <string name="github_string">Project on GITHUB (link)</string>
+    <string name="are_you_sure">Are you sure</string>
+    <string name="yes">Yes</string>
 </resources>
